@@ -2,6 +2,10 @@ CHANGELOG
 
 When		Who		What
 ======================================================================================
+2020-07-08	Richard Forth   Address issue #347
+                                - sanity check included files when building
+				config array. Requires testng and bugfixing if
+				necessary.
 2020-07-08	Sebastien Badia	Detection support for php 7.3
 				- Closes #344
 2020-07-02	Richard Forth	Addresses issue #342
